--- a/.gitignore
+++ b/.gitignore
@@ -49,10 +49,10 @@
 # auto-import.
 # .idea/artifacts
 # .idea/compiler.xml
-# .idea/modules.xml
-# .idea/*.iml
+.idea/modules.xml
+.idea/*.iml
 # .idea/modules
-# *.iml
+*.iml
 # *.ipr
 
 # CMake
